// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./PageHeader.stories Default 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="container MuiBox-root mui-style-0"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3 title mui-style-mnekkx-MuiTypography-root"
    >
      Transactions
    </h3>
  </div>
</div>
`;

exports[`./PageHeader.stories LongTitle 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="container MuiBox-root mui-style-0"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3 title mui-style-mnekkx-MuiTypography-root"
    >
      Transaction queue and history overview
    </h3>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary mui-style-1bi6f53-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      Export
    </button>
  </div>
</div>
`;

exports[`./PageHeader.stories NoBorder 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="container border MuiBox-root mui-style-0"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3 title mui-style-mnekkx-MuiTypography-root"
    >
      My Assets
    </h3>
  </div>
</div>
`;

exports[`./PageHeader.stories WithButton 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="container MuiBox-root mui-style-0"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3 title mui-style-mnekkx-MuiTypography-root"
    >
      Address book
    </h3>
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary mui-style-1gsxpsb-MuiButtonBase-root-MuiButton-root"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium mui-style-dm569u-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-1dhtbeh-MuiSvgIcon-root"
          data-testid="AddIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
          />
        </svg>
      </span>
      Add entry
    </button>
  </div>
</div>
`;

exports[`./PageHeader.stories WithIconButton 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="container MuiBox-root mui-style-0"
  >
    <h3
      class="MuiTypography-root MuiTypography-h3 title mui-style-mnekkx-MuiTypography-root"
    >
      Settings
    </h3>
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium mui-style-1ej6am8-MuiButtonBase-root-MuiIconButton-root"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium mui-style-1dhtbeh-MuiSvgIcon-root"
        data-testid="SettingsIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
        />
      </svg>
    </button>
  </div>
</div>
`;
